--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
 include(FetchContent)
 
-FetchContent_Declare(miniz GIT_REPOSITORY https://github.com/richgel999/miniz GIT_TAG c883286f1a6443720e7705450f59e579a4bbb8e2)
-FetchContent_MakeAvailable(miniz)
+FetchContent_Declare(tinf GIT_REPOSITORY https://github.com/jibsen/tinf GIT_TAG 57ffa1f1d5e3dde19011b2127bd26d01689b694b)
+FetchContent_MakeAvailable(tinf)
 
 add_executable(state_reader main.cpp)
 
-target_link_libraries(state_reader PRIVATE miniz)
+target_link_libraries(state_reader PRIVATE tinf)
